# toxic_comments_classification_upgrade

./: .pdm-python  LICENSE  README.md  cookiecutter.json  main.sh  pyproject.toml  toxic-comments-severity-conda-env.yaml
aisg-context/guide-site/: mkdocs.yml
aisg-context/guide-site/docs/: index.md
aisg-context/guide-site/docs/guide-for-user/: 01-prerequisites.md  03-mlops-components-platform.md  04-dev-wksp.md  05-virtual-env.md  07-job-orchestration.md  08-deployment.md  09-batch-inferencing.md  10-cicd.md  11-documentation.md
aisg-context/runai/: 00-pvc.yaml  01-workspace-prep.yml  02-vscode.yml  02b-jupyterlab.yml  03-repo-download.yml  03b-data-download.yml  04-docker-build-dataprep.yml  05-dataprep.yml  06-docker-build-modeltraining.yml  07-modeltraining.yml  08-modeltraining-hp.yml
conf/base/: pipelines.yaml
docs/: conf.py  index.rst
notebooks/: bryan-eda.ipynb  daniel_eda.ipynb
src/: app.py  process_data.py  train_model.py
src/tests/: test_data_prep.py
src/toxic_comments_severity/: __init__.py
src/toxic_comments_severity/data_prep/: __init__.py  datasets.py
src/toxic_comments_severity/modeling/: models.py  utils.py
